# AutoC2X-AW

./: .gitignore  CMakeLists.txt  README.md  autowarenomessage  checkMessage.cpp  checkMessage.h  detectSurroundings.cpp  detectSurroundings.h  getSelfPositionAndPub.cpp  getSelfPositionAndPub.h  orenomessage  pub.cpp  serialize_sample.cpp  sub.cpp
buffers/: CMakeLists.txt  socket_message.proto
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/mcservice_msgs/: Pose.h  Trajectory.h  TrajectoryPoint.h
devel/lib/mcservice/: mcservice
devel/lib/pkgconfig/: mcservice.pc  mcservice_msgs.pc
devel/lib/python2.7/dist-packages/mcservice_msgs/msg/: _Pose.py  _Trajectory.py  _TrajectoryPoint.py  __init__.py
devel/share/common-lisp/ros/mcservice_msgs/msg/: Pose.lisp  Trajectory.lisp  TrajectoryPoint.lisp  _package.lisp  _package_Pose.lisp  _package_Trajectory.lisp  _package_TrajectoryPoint.lisp  mcservice_msgs-msg.asd
devel/share/gennodejs/ros/mcservice_msgs/msg/: Pose.js  Trajectory.js  TrajectoryPoint.js  _index.js
devel/share/mcservice/cmake/: mcserviceConfig.cmake
devel/share/mcservice_msgs/cmake/: mcservice_msgs-msg-extras.cmake  mcservice_msgs-msg-paths.cmake  mcservice_msgsConfig.cmake
devel/share/roseus/ros/mcservice_msgs/: manifest.l
devel/share/roseus/ros/mcservice_msgs/msg/: Pose.l  Trajectory.l  TrajectoryPoint.l
src/mcservice/: CMakeLists.txt  package.xml
src/mcservice/src/: mcservice_node.cpp
src/mcservice_msgs/: CMakeLists.txt  package.xml
src/mcservice_msgs/msg/: Pose.msg  Trajectory.msg  TrajectoryPoint.msg
